<resources>
    <string name="app_name">عنواني</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="settings">Settings</string>
    <string name="hint_edittext_user_name_login">Type username</string>
    <string name="hint_edittext_password_login">Type password</string>
    <string name="button_login">Login</string>
    <string name="login_error_message">Username/Password are not correct</string>
    <string name="hint_name">Type name</string>
    <string name="hint_mobile_number">Type mobile number</string>
    <string name="hint_address">Type address</string>
    <string name="button_save">Save</string>
    <string name="button_show_appoitments">Appointments</string>
    <string name="no_data">No data to display, connect to internet and resync</string>
    <string name="data_saved_successfully_message">Data is successfully saved to your device</string>
    <string name="error_in_saving_data_message">An error occurred during saving data</string>
    <string name="user_item_empty_message">N/A</string>


    <string name="enwane">عنواني</string>
    <string name="short_address">العنوان المختصر:</string>
    <string name="location_coordinates"></string>

    <string name="title_location_permission">Enable Location</string>
    <string name="text_location_permission">You need to grant permission to allow using your current location</string>
    <string name="ok">OK</string>
    <string name="pending">...</string>
    <string name="title_activity_maps">Map</string>
    <string name="share_using">أرسل بواسطة</string>
    <string name="share_title">مشاركة عنوانك المختصر</string>
    <string name="share_code_btn">مشاركة العنوان المختصر</string>
    <string name="search_short_code">ABC123</string>
    <string name="search">الذهاب إلى العنوان</string>
    <string name="append_location">أضف نقطة توصيل</string>
    <string name="start_planning">بناء خطة التوصيل</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="delete_location">حذف</string>
    <string name="progress_message">جاري تنفيذ طلبك…</string>
    <string name="progress_message_location">جاري تحديث الموقع…</string>
    <string name="empty_message">لا يوجد بيانات</string>

    <string name="create_floating_widget">Create Floating Widget</string>
    <string name="floating_widget_label">Floating Widget Label</string>
    <string name="floating_widget_details">Floating Widget Details</string>
    <string name="draw_other_app_permission_denied">Draw over other app permission not available. App won\'t work without permission. Please try again.</string>

</resources>
