<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_coordinates"
                android:typeface="sans"
                android:textSize="40sp"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/location_coordinates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorGrey"
                android:textSize="32sp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/pending"/>


            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                tools:context=".ui.MainActivity" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_address"
                android:typeface="sans"
                android:textSize="40sp"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_short_code"
                android:id="@+id/txtSearchCode"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:id="@+id/btnSearch"/>

            <TextView
                android:id="@+id/short_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorGrey"
                android:textSize="32sp"
                android:text="@string/pending"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_code_btn"
                android:id="@+id/btn_share_address_code"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                tools:visibility="visible"/>


        </LinearLayout>

    </LinearLayout>



</RelativeLayout>